New requirement to change bg img

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="main.css">
 
 </head>
-<body>
-    <div class="app-wrap">
+<body> 
+    <div class="bg_img">
+    <div class="app-wrap">           
         <header>
             <input type="text" autocomplete="off" class="search-box"
             placeholder="Search for a city..."/>
@@ -25,6 +26,7 @@
                 <div class="hi-low">Max 13°C / Min 6°C</div>
             </div>
         </main>
+    </div>
     </div>
     <script src="main.js"></script>
 </body>
