--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App by Hardik</title>
     <link rel="stylesheet" href="main.css">
-
 </head>
 <body> 
-    <div class="bg_img">
-    <div class="app-wrap">           
+    <div class="bg_img" id="bg" style="background-image: url('images/snow.jpeg');">   
+    <div class="app-wrap"> 
         <header>
             <input type="text" autocomplete="off" class="search-box"
             placeholder="Search for a city..."/>
